<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="add_user"
            type="com.ecommerce.practiceproject.view_model.FragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:singleLine="true"
            android:hint="Enter Full Name"
            android:inputType="textPersonName"
            android:text="@={add_user.mlFullName}"
            android:textSize="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name"
            android:layout_marginTop="10dp"
            android:hint="Enter Address"
            android:singleLine="true"
            android:text="@={add_user.mlAddress}"
            android:inputType="textPostalAddress"
            android:textSize="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_address"
            android:layout_marginTop="10dp"
            android:hint="Enter Email"
            android:singleLine="true"
            android:text="@={add_user.mlEmail}"
            android:inputType="textEmailAddress"
            android:textSize="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:layout_marginTop="10dp"
            android:hint="Enter Phone"
            android:inputType="phone"
            android:singleLine="true"
            android:text="@={add_user.mlPhone}"
            android:maxLength="14"
            android:textSize="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Save"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>